--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              {
-                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
-              },
-              "src/styles.scss"
+              "src/styles/app.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -83,10 +80,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              {
-                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
-              },
-              "src/styles.scss"
+              "src/styles/app.scss"
             ],
             "scripts": [],
             "assets": [
