--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-idle/core": "^6.0.0-beta.3",
+    "@progress/kendo-angular-dateinputs": "^3.5.4",
+    "@progress/kendo-angular-dropdowns": "^3.4.2",
     "@progress/kendo-angular-inputs": "^4.0.0",
     "@progress/kendo-angular-intl": "^1.4.0",
     "@progress/kendo-angular-l10n": "^1.1.0",
