--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.0.0",
+    "terser": "^3.14.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -56,5 +57,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   }
 }
