--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "typescript": "~3.2.2"
   },
   "resolutions": {
-    "terser": "3.14.1"
+    "terser": "3.14.1",
+    "copy-webpack-plugin": "4.6.0"
   }
 }
