--- a/package.json
+++ b/package.json
@@ -11,52 +11,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@ng-idle/core": "^6.0.0-beta.3",
-    "@progress/kendo-angular-dateinputs": "^3.5.4",
-    "@progress/kendo-angular-dropdowns": "^3.4.2",
-    "@progress/kendo-angular-inputs": "^4.0.0",
-    "@progress/kendo-angular-intl": "^1.4.0",
-    "@progress/kendo-angular-l10n": "^1.1.0",
-    "@progress/kendo-angular-layout": "^3.2.0",
-    "@progress/kendo-angular-menu": "^1.2.0",
-    "@progress/kendo-angular-notification": "^1.2.0",
-    "@progress/kendo-angular-popup": "^2.5.0",
+    "@angular-devkit/build-angular": "^0.803.19",
+    "@angular/animations": "~8.2.14",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@ng-idle/core": "^8.0.0-beta.4",
+    "@progress/kendo-angular-common": "^1.2.1",
+    "@progress/kendo-angular-dateinputs": "^4.1.0",
+    "@progress/kendo-angular-dropdowns": "^4.2.2",
+    "@progress/kendo-angular-inputs": "^6.3.1",
+    "@progress/kendo-angular-intl": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-layout": "^4.1.5",
+    "@progress/kendo-angular-menu": "^2.0.0",
+    "@progress/kendo-angular-notification": "^2.0.0",
+    "@progress/kendo-angular-popup": "^3.0.3",
+    "@progress/kendo-drawing": "^1.6.0",
     "@progress/kendo-theme-default": "latest",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
-    "rxjs-compat": "^6.0.0",
-    "terser": "^3.14.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "core-js": "^3.4.1",
+    "node-sass": "^4.13.0",
+    "rxjs": "~6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "terser": "^4.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@types/jasmine": "~3.4.6",
+    "@types/jasminewd2": "~2.0.8",
     "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "codelyzer": "~5.2.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.5.2",
+    "tslint": "~5.20.1",
+    "typescript": "~3.5.3"
   },
   "resolutions": {
     "terser": "3.14.1",
