Added Web.config to the build

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,8 @@
                 "glob": "**/*",
                 "input": "src/assets/",
                 "output": "/assets/"
-              }
+              },
+              "src/Web.config"
             ],
             "styles": [
               "src/styles/app.scss"
