--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ng": "ng",
     "start": "run-script-os",
     "build": "ng build",
+    "build-prod": "ng build -c production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "start:windows": "ng serve --no-hmr --ssl --ssl-cert \"%APPDATA%\\ASP.NET\\https\\%npm_package_name%.pem\" --ssl-key \"%APPDATA%\\ASP.NET\\https\\%npm_package_name%.key\" --host=localhost",
